# dengsurvap-bf

./: .gitignore  CHANGELOG.md  DOCUMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  README.md  documentation.html  essaie.py  guide_git.txt  pyproject.toml  requirements.txt  setup.py  test_graphiques.py  test_graphiques_simple.py
dengsurvab/: __init__.py  alerts.py  analytics.py  auth.py  cli.py  client.py  exceptions.py  export.py  models.py
examples/: anomaly_detection_example.py  basic_usage.py  dashboard_example.py  resume_with_graphs.py  test.ipynb
scripts/: GUIDE_PUBLICATION_PYPI.md  README.md  essaie.py  publish.sh  setup_pypi.sh  test.ipynb  test_cli_functionality.py  update_git.sh
tests/: test_alerts.py  test_analytics.py  test_anomaly_detection.py  test_cli.py  test_client.py  test_export.py
